# Sanctifier

./: Cargo.toml  README.md  auto_rebase.sh
.github/workflows/: ci.yml  rust.yml
contracts/amm-pool/src/: lib.rs
contracts/amm-pool/test_snapshots/: add_liquidity_initializes_pool_and_locks_minimum_supply.1.json  add_liquidity_mints_proportional_lp_tokens.1.json  add_liquidity_rejects_initial_deposit_below_locked_minimum.1.json  add_liquidity_rejects_zero_amounts.1.json  get_price_rejects_unknown_pair.1.json  get_price_uses_integer_arithmetic_only.1.json  remove_liquidity_cannot_burn_locked_supply.1.json  remove_liquidity_returns_proportional_reserves.1.json  swap_enforces_max_slippage.1.json  swap_rejects_zero_liquidity_pool.1.json  swap_token_a_for_token_b_updates_price_and_reserves.1.json  swap_token_b_for_token_a_works_in_reverse_direction.1.json
contracts/amm-pool/tests/: proptest_amm.rs
contracts/kani-poc/: Cargo.toml
contracts/my-contract/: Cargo.toml
contracts/my-contract/src/: lib.rs
contracts/my-contract/test_snapshots/: allowance_returns_zero_after_expiry.1.json  approve_overwrites_previous_allowance.1.json  approve_sets_allowance.1.json  balance_of_unknown_address_is_zero.1.json  burn_fails_with_insufficient_balance.1.json  burn_from_reduces_allowance_independently_of_balance.1.json  burn_from_uses_allowance_and_reduces_balance.1.json  burn_reduces_balance.1.json  double_initialize_fails.1.json  fuzz_allowance_monotone_decrease.1.json  fuzz_allowance_monotone_decrease.10.json  fuzz_allowance_monotone_decrease.11.json  fuzz_allowance_monotone_decrease.12.json  fuzz_allowance_monotone_decrease.13.json  fuzz_allowance_monotone_decrease.14.json  fuzz_allowance_monotone_decrease.15.json  fuzz_allowance_monotone_decrease.16.json  fuzz_allowance_monotone_decrease.17.json  fuzz_allowance_monotone_decrease.18.json  fuzz_allowance_monotone_decrease.19.json  fuzz_allowance_monotone_decrease.2.json  fuzz_allowance_monotone_decrease.20.json  fuzz_allowance_monotone_decrease.3.json  fuzz_allowance_monotone_decrease.4.json  fuzz_allowance_monotone_decrease.5.json  fuzz_allowance_monotone_decrease.6.json  fuzz_allowance_monotone_decrease.7.json  fuzz_allowance_monotone_decrease.8.json  fuzz_allowance_monotone_decrease.9.json  fuzz_burn_balance_never_negative.1.json  fuzz_burn_balance_never_negative.10.json  fuzz_burn_balance_never_negative.11.json  fuzz_burn_balance_never_negative.12.json  fuzz_burn_balance_never_negative.13.json  fuzz_burn_balance_never_negative.14.json  fuzz_burn_balance_never_negative.15.json  fuzz_burn_balance_never_negative.16.json  fuzz_burn_balance_never_negative.17.json  fuzz_burn_balance_never_negative.18.json  fuzz_burn_balance_never_negative.19.json  (+117 more)
contracts/my-contract/tests/: bolero_fuzz.rs  integration_tests.rs
contracts/runtime-guard-wrapper/: Cargo.toml
contracts/runtime-guard-wrapper/test_snapshots/: execute_guarded_rejects_argument_count_mismatch.1.json  execute_guarded_rejects_missing_function_name.1.json  get_stats_tracks_successes_and_failures.1.json  health_check_fails_after_storage_budget_is_exhausted.1.json  init_called_twice_is_idempotent.1.json
contracts/runtime-guard-wrapper/tests/: integration_tests.rs
contracts/vulnerable-contract/: Cargo.toml
docs/: error-codes.md
frontend/: package-lock.json
frontend/app/: types.ts
tooling/sanctifier-cli/: Cargo.toml  LICENSE  README.md  build.rs
tooling/sanctifier-cli/src/: main.rs
tooling/sanctifier-cli/src/commands/: analyze.rs  init.rs
tooling/sanctifier-cli/tests/: cli_tests.rs
tooling/sanctifier-cli/tests/fixtures/: valid_contract.rs
tooling/sanctifier-core/: Cargo.toml  README.md
(+28 files in other folders)
